# routing-eval

./: .dockerignore  .gitignore  CONTEXT.md  DECISIONS.md  Dockerfile  HANDOFF.md  README.md  pyproject.toml
docker/: entrypoint.sh
routing_eval/: __init__.py  classify.py  cli.py  conformance.py  datasets.py  frontier.py  localcheck.py  mock.py  modelids.py  modelselect.py  policy.py  prompts.py  report.py  router.py  routing_policy.default.json  routing_policy.gemma.json  runner.py  schema.py  scorers.py  taskio.py
routing_eval/gates/: __init__.py  probe.py  signals.py
routing_eval/llm/: __init__.py  client.py  runners.py
scripts/: accuracy_diagnostic.py  classifier_paraphrase_check.py  conformance_smoke.sh  container_smoke.sh  deployed_path_diagnostic.py  fake_fireworks_server.py  gemma_battery.py  judge_proxy_diagnostic.py  live_smoke.py  public_validation_check.py  push_account2.sh  push_submission.sh  tiered_classifier_check.py  two_way_detector_check.py
scripts/fixtures/: README.md  accuracy_diagnostic.json  classifier_paraphrases.json  official_tasks.json  practice_tasks.json  public_validation.json  two_way_stress_test.json
skills/routing/end-session/: SKILL.md
skills/routing/frontier/: SKILL.md
skills/routing/run/: SKILL.md
skills/routing/verify/: SKILL.md
tests/: test_classify.py  test_conformance.py  test_end_to_end.py  test_frontier.py  test_gates.py  test_llm.py  test_localcheck.py  test_modelids.py  test_modelselect.py  test_policy.py  test_router_integration.py  test_scorers.py  test_taskio.py
